--- a/source/libs/Makefile.in
+++ b/source/libs/Makefile.in
@@ -63,6 +63,7 @@ AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BOOST_LIBS = @BOOST_LIBS@
+BZIP2_LIBS = @BZIP2_LIBS@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -75,7 +76,6 @@ CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
-DOCBOOK2MAN = @DOCBOOK2MAN@
 DSYMUTIL = @DSYMUTIL@
 ECHO = @ECHO@
 ECHO_C = @ECHO_C@
@@ -98,12 +98,10 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-LDADDLIBBZ2 = @LDADDLIBBZ2@
 LDFLAGS = @LDFLAGS@
 LEX = @LEX@
 LEXLIB = @LEXLIB@
 LEX_OUTPUT_ROOT = @LEX_OUTPUT_ROOT@
-LIBBZ2 = @LIBBZ2@
 LIBCURL = @LIBCURL@
 LIBCURL_CPPFLAGS = @LIBCURL_CPPFLAGS@
 LIBEXPAT = @LIBEXPAT@
@@ -224,7 +222,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = triangul sdlmm paragui loki-0.1.6 @revellib@ @SdlSoundDir@ @LIBBZ2@ 
+SUBDIRS = triangul sdlmm paragui loki-0.1.6 @revellib@ @SdlSoundDir@ 
 DIST_SUBDIRS = triangul sdlmm paragui loki-0.1.6 revel sdl_sound 
 EXTRA_DIST = $(srcdir)/rand/*
 all: all-recursive
