--- a/source/unix/mapeditor/Makefile.am
+++ b/source/unix/mapeditor/Makefile.am
@@ -29,7 +29,7 @@ player.cpp cannedmessages.cpp mapimageexport.cpp mainscreenwidget.cpp windowing.
 playercolor.cpp
 
 asc_mapedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
-$(top_builddir)/source/libs/triangul/libtriangul.la @LDADDLIBBZ2@ \
+$(top_builddir)/source/libs/triangul/libtriangul.la $(BZIP2_LIBS) \
 $(SIGC_LIBS) $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
 $(top_builddir)/source/util/libutil.la  \
 $(top_builddir)/source/actions/libactions.la  \
