--- a/configure.in
+++ b/configure.in
@@ -7,10 +7,6 @@ AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE
 
 
-dnl AC_MSG_NOTICE("srcdir is $srcdir ")
-dnl AC_MSG_NOTICE("abs_srcdir is $abs_srcdir ")
-dnl AC_MSG_NOTICE("ac_top_srcdir is $ac_top_srcdir ")
-
 if test -f $srcdir/source/strtmesg.cpp; then
    dnl extracting the version number from the source code
    dnl (it has to be stored there to be accessible by the windows build too)
@@ -58,7 +54,7 @@ if test "$GCC" = yes; then
               [[ GCC $gcc_version detected. This version of gcc is not an official release ]
                [ and does produce incorrect code. You may try to build ASC, but it will]
                [ most likely NOT run.]
-               [ To build ASC, we recommend GCC 3.2 ; GCC 2.95 is still supported too.]
+               [ To build ASC, we recommend GCC >= 3.2 ]
                [ You can bypass this test with --disable-gcc296-detection, so you can build ]
                [ ASC and see for yourself. And perhaps even rewrite some parts of ASC to ]
                [ make them Redhat compatible ;) ]])
@@ -66,9 +62,7 @@ if test "$GCC" = yes; then
 
       gcc_version29=`echo $gcc_version | grep 2.9`
       if test "X$gcc_version29" != "X"; then
-         AC_MSG_WARN(
-              [[ GCC $gcc_version detected. GCC 2.95 is currently still supported, but we ]
-               [are planning to drop support for GCC 2.x in the medium term.  ]])
+         AC_MSG_WARN([ GCC $gcc_version detected. We don't support that any more. ])
       fi
    fi
 fi
@@ -105,7 +99,8 @@ AC_DEFUN([AC_LIB_MISSING], [
 
 
 
-dnl mikem: sure this is one is only interesting for martin bickel ;)
+dnl This requires a tweaked version of genparse - but if the command line options change at some point in time
+dnl we should rather switch to a different library (like libpopt) 
 AC_ARG_ENABLE( genparse, AS_HELP_STRING([--enable-genparse],[enables recreation of the command line parsers]), ENABLEGENPARSE=1 )
 if test "X$ENABLEGENPARSE" = "X1"; then
    AC_CHECK_PROG(GENCLL,genparse,genparse)
@@ -118,9 +113,6 @@ fi
 dnl *************************************************************************
 dnl Checks for libraries.
 dnl
-
-dnl should be done by SDL
-dnl AC_CHECK_LIB( pthread, pthread_create )
 
 dnl now save current FLAGS - they are modified to allow SDL test progs to
 dnl be compiled correctly
@@ -145,12 +137,6 @@ AC_SUBST(LIBCURL)
 AC_SUBST(LIBCURL_CPPFLAGS)
 AC_SUBST(NETWORKLIB)
 
-
-#XVID_VERSION=1.0.1
-#AM_PATH_XVID($XVID_VERSION,:, 
-
-#AC_SUBST(XVID_CFLAGS)
-#AC_SUBST(XVID_LIBS)
 
 XVIDAVAIL=1
 
@@ -453,15 +439,13 @@ CFLAGS="$SAVE_CFLAGS $AdditionalIncludeDir"
 LIBS="$SAVE_LIBS "
 
 
-dnl libbz2 stuff (should have a versionnr about 1.0.0)
-lib_bz2_static=no
-dnl AC_ARG_ENABLE( libbz2-static, AS_HELP_STRING([--enable-libbz2-static],[compiles a static libbz2 into the binary of asc]), [lib_bz2_static=$enableval], [lib_bz2_usecache=yes] )
-
 AC_CHECK_LIB( bz2, BZ2_bzReadOpen,, AC_LIB_MISSING(libbz2,http://www.bzip.org/,,[ which is VERY unlikely,] ))
 AC_CHECK_HEADER( bzlib.h,, AC_LIB_MISSING(libbz2,http://www.bzip.org/,,[ which is VERY unlikely,] ))
 
-LDADDLIBBZ2=-lbz2
-AC_DEFINE_UNQUOTED( USE_SYSTEM_BZ2, 1, [link against libbzip2] )
+BZIP2_LIBS=-lbz2
+AC_SUBST(BZIP2_LIBS)
+
+
 
 
 AC_CHECK_LIB( png, png_create_write_struct,, AC_LIB_MISSING(png,http://www.cdrom.com/pub/png/,,[ which is VERY unlikely,] ), -lz )
@@ -600,13 +584,6 @@ AC_CHECK_FILE( "$srcdir/source/unix/pbpedit/pbpeditor.cpp", PBPED=pbpedit )
 AC_SUBST(PBPED)
 
 
-dnl shell vars set by test&feature flag for libbz2
-AC_SUBST(LIBBZ2)
-AC_SUBST(LDADDLIBBZ2)
-
-dnl docbook2man
-AC_SUBST(DOCBOOK2MAN)
-
 AC_SUBST(asc_version)
 
 dnl this is a hack to prevent automake from interpreting the include statement; it would do so if it was directly in data/Makefile.am
@@ -629,7 +606,7 @@ AC_ARG_ENABLE( internal-loki, AS_HELP_STRING([--enable-internal-loki], [Don't us
 AC_CHECK_HEADER(loki/Functor.h,lokifound=yes,lokifound=no) 
 
 AC_MSG_CHECKING(for Loki library to use)
-if test "x$lokifound" != xyes -o $forceinternallibloki = yes ; then 
+if test x$lokifound != xyes -o x$forceinternallibloki = xyes  ; then 
    AC_MSG_RESULT(internal)
    LokiDir="libs/loki-0.1.6/include/"
    LokiInclude="-I\${top_srcdir}/source/libs/loki-0.1.6/include/"
