--- a/source/libs/Makefile.am
+++ b/source/libs/Makefile.am
@@ -1,6 +1,6 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= triangul sdlmm paragui loki-0.1.6 @revellib@ @SdlSoundDir@ @LIBBZ2@ 
+SUBDIRS 		= triangul sdlmm paragui loki-0.1.6 @revellib@ @SdlSoundDir@ 
 
 DIST_SUBDIRS= triangul sdlmm paragui loki-0.1.6 revel sdl_sound 
 
