--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/getopt;&quot;$(libsigcpp)&quot;;../../../libs/paragui/include;../../../libs/sdlmm/include;&quot;$(libpng)&quot;;&quot;../../../libs/loki-0.1.6/include&quot;"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/getopt;&quot;$(libsigcpp)&quot;;../../../libs/paragui/include;../../../libs/sdlmm/include;&quot;$(libpng)&quot;;&quot;../../../libs/loki-0.1.6/include&quot;;../../../libs/bzlib"
 				PreprocessorDefinitions="WIN32;ASC_DEBUG;FREEMAPZOOM;NEWKEYB;_WIN32_;karteneditor;_SDL_;NOMINMAX"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -131,7 +131,7 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/getopt;&quot;$(libsigcpp)&quot;;../../../libs/paragui/include;../../../libs/sdlmm/include;&quot;$(libpng)&quot;;&quot;../../../libs/loki-0.1.6/include&quot;"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/getopt;&quot;$(libsigcpp)&quot;;../../../libs/paragui/include;../../../libs/sdlmm/include;&quot;$(libpng)&quot;;&quot;../../../libs/loki-0.1.6/include&quot;;../../../libs/bzlib"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;FREEMAPZOOM;NEWKEYB;_WIN32_;karteneditor;_SDL_;NOMINMAX"
 				StringPooling="true"
 				RuntimeLibrary="2"
