--- a/source/tools/win/demount.vcproj
+++ b/source/tools/win/demount.vcproj
@@ -67,7 +67,7 @@
 				ShowProgress="0"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin\demount.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(SDL)/lib&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;"
 				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/demount.pdb"
@@ -151,7 +151,7 @@
 				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.lib SDLmain.lib"
 				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin\demount.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(SDL)/lib&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/$(ConfigurationName)&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;"
 				ManifestFile="$(OutDir)\bin\$(TargetFileName).intermediate.manifest"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/bin/demount.pdb"
