Fixed: weaponguide screwing up on non-ascii characters  Added new weaponguide targets

--- a/doc/unitguide/Makefile.in
+++ b/doc/unitguide/Makefile.in
@@ -539,11 +539,26 @@ uninstall-am:
 	uninstall uninstall-am
 
 
-unitguide:
+unitguidehtml:
 	mkdir -p output/html
 	$(top_builddir)/source/tools/linux/asc_weaponguide -d output/html/  -s 100 -i -l html -t ../asc.css -m asc.css --roottech 101000,101913 --allbuildings
 	$(top_builddir)/source/tools/linux/asc_weaponguide -d output/html/  -s 500 -i -l html -t ../asc.css -m asc.css --roottech 101000,101913 --allbuildings
-	cd output && "$(abs_top_srcdir)/doc/unitguide/menu.pl" "$(abs_top_srcdir)/doc/unitguide/output/entries.txt"
+
+unitguideallhtml:
+	mkdir -p output/html
+	$(top_builddir)/source/tools/linux/asc_weaponguide -d output/html/  -i -l html -t ../asc.css -m asc.css --allbuildings
+
+unitguideallmenu:	
+	echo 'Units;asc.css;-;' > output/entries-all.txt
+	ls output/html/unitset_id*.groups | sed 's,^output/,.#,' >> output/entries-all.txt
+	echo 'Buildings;asc.css;-;' >> output/entries-all.txt
+	ls output/html/buildingset_id*.groups | sed 's,^output/,.#,' >> output/entries-all.txt
+	cd output && "$(abs_top_srcdir)/doc/unitguide/menu.pl" "--input=$(abs_top_srcdir)/doc/unitguide/output/entries-all.txt"
+
+unitguidemenu:	
+	cd output && "$(abs_top_srcdir)/doc/unitguide/menu.pl" "--input=$(abs_top_srcdir)/doc/unitguide/output/entries.txt"
+
+unitguide: unitguidehtml unitguidemenu
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
