--- a/configure.in
+++ b/configure.in
@@ -35,10 +35,6 @@ dnl
 AC_PROG_CC
 AC_PROG_CXX
 
-if test x$CXX = x; then
-   AC_MSG_ERROR([No C++ compiler found! Please install it. The package is typcially 'g++' ])
-fi
-
 AC_CHECK_PROG(PERLFOUND,perl,yes,no)
 if test "$PERLFOUND" = no; then
      AC_MSG_ERROR([Perl not found. It is required for this configure script.])
@@ -79,6 +75,19 @@ AC_SUBST(top_srcdir)
 
 AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
+
+
+AC_MSG_CHECKING(for working C++ compiler)
+AC_TRY_COMPILE( , [ return 0; ],, compilerBroken=yes)
+
+if test "x$compilerBroken" = xyes ; then
+  AC_MSG_RESULT(no)
+  AC_MSG_ERROR( No working C++ compiler found. Please install it! Typical package name is 'g++' )
+else  
+  AC_MSG_RESULT(yes)
+fi
+
+
 AC_CHECK_HEADERS( bitset,, 
               AC_MSG_ERROR( 
                [[ Header <bitset> not found. This is probably caused by having an outdated ] 
