--- a/source/unittests/Makefile.am
+++ b/source/unittests/Makefile.am
@@ -5,7 +5,8 @@ AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ -I$(top_sr
 
 noinst_LTLIBRARIES 	= libunittests.la
 
-libunittests_la_SOURCES	= movementtest.cpp attacktest.cpp unittestutil.cpp main.cpp ai-move1.cpp viewtest.cpp ai-service1.cpp transfercontroltest.cpp
+libunittests_la_SOURCES	= movementtest.cpp attacktest.cpp unittestutil.cpp main.cpp ai-move1.cpp viewtest.cpp ai-service1.cpp transfercontroltest.cpp \
+                          recyclingtest.cpp
 libunittests_la_LIBADD	= @SDL_LIBS@
 
 
