ChangeResourceProcessing (powerplant, mining) now undo capable  CancelReseach now undo capable  Some cleanup and refactoring  Fixed crash in message editor on ctrl-left

--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -3,7 +3,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 
 AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ 
 
-noinst_LTLIBRARIES 	= libactions.la libdirectunitactions.la libmiscactions.la libmapactions.la libfullgameactions.la
+noinst_LTLIBRARIES 	= libactions.la libdirectunitactions.la  libmapactions.la 
 
 libactions_la_SOURCES	= action.cpp command.cpp context.cpp actionresult.cpp actioncontainer.cpp containeraction.cpp
 libactions_la_LIBADD		= @SDL_LIBS@
@@ -13,20 +13,15 @@ libdirectunitactions_la_SOURCES	=  inflictdamage.cpp destructcontainer.cpp const
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp \
                           recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp jumpdrivecommand.cpp \
                           powergenerationswitchcommand.cpp trainunitcommand.cpp repairbuildingcommand.cpp transfercontrolcommand.cpp \
-                          buildproductionlinecommand.cpp removeproductionlinecommand.cpp
+                          buildproductionlinecommand.cpp removeproductionlinecommand.cpp cancelresearchcommand.cpp setresourceprocessingratecommand.cpp \
+                          servicing.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp \
+                          containeraction.cpp recycleunitcommand.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
+                          unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp \
+                          constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp servicecommand.cpp                           
                           
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
-libmiscactions_la_SOURCES	= servicing.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
-libmiscactions_la_LIBADD		= @SDL_LIBS@
-
 libmapactions_la_SOURCES	= spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
 libmapactions_la_LIBADD		= @SDL_LIBS@
-
-libfullgameactions_la_SOURCES	= containeraction.cpp recycleunitcommand.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
-                                  unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp \
-                                  constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp servicecommand.cpp 
-libfullgameactions_la_LIBADD		= @SDL_LIBS@
-
 
 EXTRA_DIST=$(srcdir)/*.h
