Fixed replay errors with automatic training

--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -12,16 +12,18 @@ libdirectunitactions_la_SOURCES	=  inflictdamage.cpp destructcontainer.cpp const
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp \
                           recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp jumpdrivecommand.cpp \
-                          powergenerationswitchcommand.cpp trainunitcommand.cpp repairbuildingcommand.cpp transfercontrolcommand.cpp \
+                          powergenerationswitchcommand.cpp repairbuildingcommand.cpp transfercontrolcommand.cpp \
                           buildproductionlinecommand.cpp removeproductionlinecommand.cpp cancelresearchcommand.cpp setresourceprocessingratecommand.cpp \
                           servicing.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp \
                           containeraction.cpp recycleunitcommand.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
                           unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp \
-                          constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp servicecommand.cpp                           
+                          constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp 
                           
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
-libmapactions_la_SOURCES	= spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
+# this are actions that are also needed by mapeditor
+libmapactions_la_SOURCES	= spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp \
+                                  trainunitcommand.cpp servicecommand.cpp
 libmapactions_la_LIBADD		= @SDL_LIBS@
 
 EXTRA_DIST=$(srcdir)/*.h
